--- a/index.html
+++ b/index.html
@@ -21,48 +21,48 @@
         <div class=" container text-center">
             <p class="h2 text-center">Esercizio 1</p>
             <div class="row ">
-                <div class="col-4  bg-primary text-white border border-black ">
+                <div class="col-4  bg-primary text-white border border-black p-3">
                     <p>Contenuto1 Esercizio 1</p>
                 </div>
-                <div class="col-4  bg-primary text-white border border-black ">
+                <div class="col-4  bg-primary text-white border border-black p-3">
                     <p>Contenuto2 Esercizio 1</p>
                 </div>
-                <div class="col-4  bg-primary text-white border border-black ">
+                <div class="col-4  bg-primary text-white border border-black p-3">
                     <p>Contenuto3 Esercizio 1</p>
                 </div>
             </div>
             <div class="container text-center">
                 <p class="h2 text-center">Esercizio 2</p>
                 <div class="row">
-                    <div class="col-4 bg-warning text-black border border-black">
+                    <div class="col-4 bg-warning text-black border border-black p-3">
                         <p>Contenuto</p>
                     </div>
-                    <div class="col-4 bg-warning text-black border border-black">
+                    <div class="col-4 bg-warning text-black border border-black p-3">
                         <p>Contenuto</p>
                     </div>
-                    <div class="col-4 bg-warning text-black border border-black">
+                    <div class="col-4 bg-warning text-black border border-black p-3">
                         <p>Contenuto</p>
                     </div>
                 </div>
                 <div class="container text-center">
                     <p class="h2 text-center">Esercizio 3</p>
                     <div class="row">
-                        <div class="col-4 bg-success text-white border border-black">
+                        <div class="col-4 bg-success text-white border border-black p-3">
                             <p>Contenuto</p>
                         </div>
-                        <div class="col-4 bg-success text-white border border-black">
+                        <div class="col-4 bg-success text-white border border-black p-3">
                             <p>Contenuto</p>
                         </div>
-                        <div class="col-4 bg-success text-white border border-black">
+                        <div class="col-4 bg-success text-white border border-black p-3">
                             <p>Contenuto</p>
                         </div>
-                        <div class="col-4 bg-success text-white border border-black">
+                        <div class="col-4 bg-success text-white border border-black p-3">
                             <p>Contenuto</p>
                         </div>
-                        <div class="col-4 bg-success text-white border border-black ">
+                        <div class="col-4 bg-success text-white border border-black p-3">
                             <p>Contenuto</p>
                         </div>
-                        <div class="col-4 bg-success text-white border border-black ">
+                        <div class="col-4 bg-success text-white border border-black p-3">
                             <p>Contenuto</p>
                         </div>
 
@@ -73,23 +73,23 @@
             <div class="container text-center">
                 <p class="h2 text-center">Esercizio 4</p>
                 <div class="row">
-                    <div class="col-3 bg-danger text-white border border-black">
+                    <div class="col-3 bg-danger text-white border border-black p-3">
                         <p>Contenuto</p>
                     </div>
-                    <div class="col-6 bg-danger text-white border border-black">
+                    <div class="col-6 bg-danger text-white border border-black p-3">
                         <p>Contenuto</p>
                     </div>
-                    <div class="col-3 bg-danger text-white border border-black">
+                    <div class="col-3 bg-danger text-white border border-black p-3">
                         <p>Contenuto</p>
                     </div>
                 </div>
                 <div class="container text-center">
                     <p class="h2 text-center">Esercizio 5</p>
                     <div class="row">
-                        <div class="col-4 bg-success border border-black">
+                        <div class="col-4 bg-success border border-black p-3">
                             <p>Contenuto</p>
                         </div>
-                        <div class="col-8 bg-success border border-black">
+                        <div class="col-8 bg-success border border-black p-3">
                             <p>Contenuto</p>
                         </div>
                     </div>
